--- a/src/style.css
+++ b/src/style.css
@@ -2,14 +2,6 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-.weather-app {
-  max-width: 600px;
-  margin: 30px auto;
-  padding: 20px;
-  border: 1px solid #dadde1;
-  border-radius: 10px;
-}
-
 h1 {
   color: #b9d8e8;
   font-size: 40px;
@@ -31,12 +23,19 @@ li {
   padding: 0px;
   margin: 0px;
 }
+.weather-app {
+  max-width: 600px;
+  margin: 30px auto;
+  padding: 20px;
+  border: 1px solid #dadde1;
+  border-radius: 10px;
+}
 
-.weather-image {
+.weather-image img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 180px;
 }
 .btn-info {
   background-color: #b9d8e8;
@@ -47,4 +46,20 @@ li {
   background-color: #a2c9dd;
   border-color: #a2c9dd;
   color: #ffff;
+}
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 30px auto;
+}
+
+#temp strong {
+  font-size: 45px;
+  font-weight: 400;
+  line-height: 1;
+}
+
+#temp .units {
+  position: relative;
+  font-size: 16px;
+  top: -21px;
 }
