--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,5 @@
 body {
   font-family: "Poppins", sans-serif;
-  background-image: url("https://images.pexels.com/photos/19670/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
 }
 
 h1 {
@@ -23,6 +22,7 @@ li {
   line-height: 19px;
   padding: 0px;
   margin: 0px;
+  text-transform: capitalize;
 }
 .weather-app {
   max-width: 600px;
