--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,9 @@ li {
   padding: 0px;
   margin: 0px;
 }
+li:first-letter {
+  text-transform: capitalize;
+}
 .weather-app {
   max-width: 600px;
   margin: 30px auto;
@@ -63,8 +66,4 @@ li {
   position: relative;
   font-size: 16px;
   top: -21px;
-}
-
-#weather-description {
-  text-transform: capitalize;
 }
