--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 h1 {
-  color: #b9d8e8;
+  color: #000000;
   font-size: 40px;
   font-weight: 100;
   line-height: 28px;
@@ -41,13 +41,12 @@ li:first-letter {
   margin-left: auto;
   margin-right: auto;
 }
-.btn-go,
-.btn-current {
+.btn-go {
   background-color: #b9d8e8;
   border-color: #b9d8e8;
   color: #ffff;
 }
-.btn-info:hover {
+.btn-go:hover {
   background-color: #a2c9dd;
   border-color: #a2c9dd;
   color: #ffff;
@@ -75,7 +74,7 @@ li:first-letter {
 }
 
 .description {
-  font-size: 12px;
+  font-size: 16px;
   line-height: 0;
   margin: 10px 30px 30px 40px;
 }
@@ -89,7 +88,7 @@ li:first-letter {
 }
 
 .weather-temperature .active {
-  color: black;
+  color: #000000;
   cursor: default;
   text-decoration: none;
 }
