--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@ body {
 
 h1 {
   color: #000000;
-  font-size: 40px;
+  font-size: 30px;
   font-weight: 100;
   line-height: 28px;
   margin: 15px 15px 15px 0px;
@@ -18,7 +18,7 @@ ul {
 
 li {
   list-style: none;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 100;
   line-height: 19px;
   padding: 0px;
@@ -28,12 +28,12 @@ li:first-letter {
   text-transform: capitalize;
 }
 .weather-app {
-  max-width: 650px;
+  max-width: 700px;
   margin: 30px auto;
   padding: 20px;
   border: 1px solid #dadde1;
   border-radius: 10px;
-  background: rgba(255, 255, 255, 0.7);
+  background: rgba(255, 255, 255, 0.6);
 }
 
 .weather-image img {
@@ -51,6 +51,13 @@ li:first-letter {
   border-color: #a2c9dd;
   color: #ffff;
 }
+
+.form-control:focus {
+  border-color: #a2c9dd;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
+    0 0 8px rgba(162, 201, 221, 0.6);
+}
+
 .weather-app-wrapper {
   max-width: 600px;
   margin: 30px auto;
@@ -62,7 +69,7 @@ li:first-letter {
 }
 
 .weather-temperature strong {
-  font-size: 50px;
+  font-size: 45px;
   font-weight: 400;
   line-height: 1;
 }
@@ -70,13 +77,14 @@ li:first-letter {
 .weather-temperature .units {
   position: relative;
   font-size: 16px;
-  top: -24px;
+  top: -20px;
+  text-decoration: none;
 }
 
 .description {
-  font-size: 16px;
+  font-size: 14px;
   line-height: 0;
-  margin: 10px 30px 30px 40px;
+  margin: 15px 10px 10px 35px;
 }
 
 .description:first-letter {
