Minor css changes

--- a/src/style.css
+++ b/src/style.css
@@ -31,7 +31,7 @@ li:first-letter {
   max-width: 700px;
   margin: 30px auto;
   padding: 20px;
-  border: 1px solid #dadde1;
+  border: none;
   border-radius: 10px;
   background: rgba(255, 255, 255, 0.6);
 }
