--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,21 @@
 body {
   font-family: "Poppins", sans-serif;
-  background-image: url("https://images.pexels.com/photos/19670/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
 }
 
 h1 {
   color: #000000;
-  font-size: 30px;
+  font-size: 45px;
   font-weight: 100;
-  line-height: 28px;
-  margin: 15px 15px 15px 0px;
+  line-height: 50px;
+  text-align: center;
+  margin: 15px 0px 15px 0px;
 }
 
 ul {
-  margin: 15px 15px 15px 0px;
+  margin: 15px 0px 15px 0px;
   padding: 0;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 li {
@@ -28,34 +30,41 @@ li:first-letter {
   text-transform: capitalize;
 }
 .weather-app {
-  max-width: 700px;
-  margin: 30px auto;
+  max-width: 600px;
   padding: 20px;
   border: none;
   border-radius: 10px;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(220, 227, 234);
+  display: block;
+  margin: 50px auto 0px auto;
+  box-shadow: 10px 10px 20px rgba(124, 131, 138, 0.6);
 }
 
 .weather-image img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  max-width: 180px;
 }
 .btn-go {
-  background-color: #b9d8e8;
-  border-color: #b9d8e8;
-  color: #ffff;
+  background-color: rgba(220, 227, 234);
+  border-color: rgba(220, 227, 234);
+  color: black;
+  margin: 20px 40px 20px 40px;
 }
 .btn-go:hover {
-  background-color: #a2c9dd;
-  border-color: #a2c9dd;
-  color: #ffff;
+  background-color: #c5d0db;
+  border-color: #c5d0db;
+  color: black;
+}
+.form-control {
+  margin: 20px 0px 20px 60px;
 }
 
 .form-control:focus {
-  border-color: #a2c9dd;
+  border-color: #c5d0db;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
-    0 0 8px rgba(162, 201, 221, 0.6);
+    0 0 8px rgba(124, 131, 138, 0.8);
 }
 
 .weather-app-wrapper {
@@ -65,7 +74,8 @@ li:first-letter {
 
 .weather-temperature {
   text-align: center;
-  margin: 40px 25px 5px 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .weather-temperature strong {
@@ -80,19 +90,18 @@ li:first-letter {
   top: -20px;
   text-decoration: none;
 }
-
+.wind-units {
+  text-transform: lowercase;
+}
 .description {
-  font-size: 14px;
-  line-height: 0;
-  margin: 15px 10px 10px 35px;
+  margin: 0px 30px 0px 30px;
 }
 
-.description:first-letter {
-  text-transform: capitalize;
-}
-#date,
-#city {
-  text-transform: uppercase;
+hr.new1 {
+  width: 50px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .weather-temperature .active {
