Display forecast data using the API

--- a/src/style.css
+++ b/src/style.css
@@ -116,10 +116,14 @@ hr.new1 {
 }
 
 .weather-forecast {
+  margin-top: 20px;
+  margin-left: 10px;
   text-align: center;
   color: #000000;
-  display: block;
-  margin: 50px auto 0px auto;
+  padding: 15px;
+  background-color: rgb(255, 255, 255, 0.7);
+  border: none;
+  border-radius: 10px;
 }
 
 .weather-forecast-date {
